Add Readme status

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,6 +1,6 @@
 
 steps:
-  - name: ":rspec:"
+  - label: ":rspec:"
     command: "bundle install && bundle rake db:migrate && bundle exec rspec --color specs"
-  - name: ":rubocop:"
+  - label: ":rubocop:"
     command: "bundle install && bundle exec rubocop"
