--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -4,7 +4,7 @@ steps:
       - echo "Hello!"
   - label: ":rspec:"
     commands:
-      - bundle rake db:migrate
+      - bundle exec rake db:migrate
       - bundle exec rspec --color specs
   - label: ":rubocop:"
     commands:
